feat: add more li

--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,8 @@
             <li class="movies__item"></li>
             <li class="movies__item"></li>
             <li class="movies__item"></li>
+            <li class="movies__item"></li>
+            <li class="movies__item"></li>
         </ul>
     </main>
     <script src="js/main.js"></script>
